subprojects/swen430/src/test/resources/tests/valid/IfElse_Valid_7.while
void main() {
    if (5 == 10) {
        print "hi";
    } else {
        print "bye";
    }
}
