subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_31.while
int foo() {
    if (true) {
        int x = 2;
    } else {
        int x = 3;
    }

    return x;
}
